--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta name="google-site-verification" content="2tLOIrcsBoxIOfSh1JB7jJbub9I-Ndj_V2v9b2QzBx8" />
 
-  <title>Gladys Lacia &ndash; Virtual Assistant&colon; Content Writer, Social Media Marketing, Project Management</title>
+  <title>Gladys Lacia &ndash; Virtual Assistant&colon; SEO Content Writer, Social Media Marketing, Project Management</title>
   <meta
   name="description"
-  content="Gladys Lacia &ndash; Virtual Assistant&colon; Content Writer, Social Media Marketing, Project Management &colon; Content & Editorial VA, Research & Ideation Support VA, Community Management &
+  content="Gladys Lacia &ndash; Virtual Assistant&colon; SEO Content Writer, Social Media Marketing, Project Management &colon; Content & Editorial VA, Research & Ideation Support VA, Community Management &
 Engagement VA, and Documentation & Workflow Support VA"
     />
 
@@ -34,7 +34,7 @@ Engagement VA, and Documentation & Workflow Support VA"
 
       <div class="header-text">
         <h1>Gladys Lacia</h1>
-        <p class="role">Virtual Assistant&colon; Content Writer, Social Media Marketing, Project Management</p>
+        <p class="role">Virtual Assistant&colon; SEO Content Writer, Social Media Marketing, Project Management</p>
       </div>
     </header>
 
